--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 body {
   margin: 0;
   font-family:'Roboto', sans-serif;
-  /* background-color: #333335; */
+  background-color: #333335;
 	font-size: 18px;
     font-weight: 300;
 
