--- a/Ghost_anim/st.css
+++ b/Ghost_anim/st.css
@@ -1,11 +1,11 @@
 body{
     margin: 0;
     padding: 0;
-    font-family: 'verdana';
+    font-family:'Roboto', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 80vh;
+    height: 85vh;
     background: #262626;
 }
 ul{
@@ -15,9 +15,9 @@ ul{
 }
 ul li{
     list-style: none;
-    color: #fff;
-    font-size: 6em;
-    letter-spacing:10px;
+    color: rgb(112, 231, 96);
+    font-size: 5em;
+    letter-spacing:8px;
     filter: blur(0px);
     transition:1s;
 }
@@ -28,6 +28,5 @@ ul li:hover ~ li
     transition: 1s;
     filter: blur(20px);
     opacity: 0;
-    cursor: pointer;
-    
+    cursor: pointer;   
 }
