--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,8 @@ html,body {
     overflow-x: auto;
     max-width: 100%;
     height: 100%;
+    /* overflow: hidden; */
 }
-
 canvas {
   display: block;
   /* vertical-align: bottom; */
@@ -20,23 +20,29 @@ canvas {
 /* ---- particles.js container ---- */
 
 #particles-js {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  min-height: 513px;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #1f1f1f;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
-  z-index: 0;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    background-color: #242424;
+    /* ________HoverEffect________________ */
+    background: url('..//images/background.jpg') no-repeat center center;  
+    background-size: cover;
+
+    /* ____________ParallaxEffect_____________ */
+    /* 
+    background-image: url(https://raw.githubusercontent.com/oscicen/oscicen.github.io/master/img/depth-3.png), 
+                      url(https://raw.githubusercontent.com/oscicen/oscicen.github.io/master/img/depth-2.png),
+                      url(https://raw.githubusercontent.com/oscicen/oscicen.github.io/master/img/depth-1.png);;
+    background-position: center;
+    background-position: 50% 50%;
+    background-repeat: no-repeat; */
+
 }
 
 #main {
   height: 100%;
+  width: 100%;
 }
 
 a:active, a:focus {
@@ -56,7 +62,7 @@ a:active, a:focus {
     padding-top: 0.05em;
     padding-right: 0.05em;
     padding-left: 0.05;
-    padding-bottom: 0.05em;
+    padding-bottom: 0.07em;
     overflow: hidden;
     font-weight: 250;
 
