--- a/css/styles.css
+++ b/css/styles.css
@@ -24,12 +24,11 @@ canvas {
     width: 100%;
     height: 100%;
     z-index: 0;
-    background-color: #242424;
+    background-image: radial-gradient(#242424, #0a0a0a); 
     /* ________HoverEffect________________ */
     /* background: url('..//images/background.jpg') no-repeat center center;  */
-    background-image: radial-gradient(#242424, #0a0a0a); 
-    /* transform: scale(1.1);  */
-    background-size: cover;
+    /* transform: scale(1.1); 
+    background-size: cover; */
 
     /* ____________ParallaxEffect_____________ */
     /* 
