--- a/css/styles.css
+++ b/css/styles.css
@@ -3,15 +3,19 @@
 html,body {
     margin: 0;
     font-family:'Roboto', sans-serif;
-    background-color: #0a0a0a;
+    background-color: #030303;
 	font-size: 18px;
     font-weight: 300;
-    overflow-y: auto;
-    overflow-x: auto;
     max-width: 100%;
     height: 100%;
-    /* overflow: hidden; */
+    scrollbar-width: none;
+    -ms-overflow-style: none;
 }
+::-webkit-scrollbar {
+    width: 0px;
+    display: none;
+}
+
 canvas {
   display: block;
   /* vertical-align: bottom; */
@@ -24,7 +28,7 @@ canvas {
     width: 100%;
     height: 100%;
     z-index: 0;
-    background-image: radial-gradient(#242424, #0a0a0a); 
+    background-image: radial-gradient(#252525, #030303); 
     /* ________HoverEffect________________ */
     /* background: url('..//images/background.jpg') no-repeat center center;  */
     /* transform: scale(1.1); 
@@ -53,6 +57,8 @@ a:active, a:focus {
     position: center;
     font-weight: 220;
     font-size: 4em;
+    visibility: hidden;
+    transition: 0.5s;
     /* text-shadow: 0 3px 0 darkcyan, 0px 3px 5px rgba(0,0,0,0.5); */
 }
 
@@ -72,6 +78,7 @@ a:active, a:focus {
 .ml9 .letter {
     position: relative;
     transform-origin: 50% 100%;
+    visibility: visible;
     display: inline-block;
     line-height: 1em;
 	text-shadow: 0 1px 0 #1b8070, 0px 3px 3px rgba(0,0,0,0.8);
