--- a/css/lght.css
+++ b/css/lght.css
@@ -2,8 +2,11 @@
 @media (min-width: 0px) {
     #reld .item > .circle-hold {filter: invert(1) ;}
     .ml9 {filter: invert(1) ;}
-    #main-footer {filter: invert(1) ; color: #252525; }
-    #particles-js { filter: invert(1); background-image: radial-gradient( #000000 ,#9b9b9b); }
+    #main-footer {filter: invert(1) ; color: #a7a7a7; }
+    #particles-js { 
+        filter: invert(1);
+        background-image: radial-gradient( #000000 ,#4141415e); 
+    }
     .button {filter: invert(1) ; }
     .button span{display: none;}
     .button:after{content:"Switch to dark mode";}
