--- a/css/lght.css
+++ b/css/lght.css
@@ -11,4 +11,8 @@
     .button span{display: none;}
     .button:after{content:"Switch to dark mode";}
     html,body{background-color: #646464;}
+    .loader {
+        background-image: radial-gradient( #000000 ,#414141); 
+        filter: invert(1);
+    }
 }
