--- a/css/loader.css
+++ b/css/loader.css
@@ -5,7 +5,8 @@
     min-height: 100vh;
     opacity: 1;
     background-image: radial-gradient(#252525, #030303); 
-    animation: fade 2.5s ease;
+    animation: fade 2.8s ease;
+    animation-iteration-count: 1;
   }
   
   .loader > span {
@@ -36,7 +37,7 @@
     }
   } 
   @keyframes fade {
-    50% {
+    60% {
         opacity: 1;
     }
     100% {
