--- a/css/loader.css
+++ b/css/loader.css
@@ -16,12 +16,16 @@
     border-radius: 50%;
     margin: 0 8px;
     transform: translate3d(0);
-    animation: bounce 0.6s infinite alternate;
+    animation: bounce 0.5s infinite alternate 0.1s;
+  }
+  
+  .loader > span:nth-child(1) {
+    animation-delay: 0.2s;
   }
   
   .loader > span:nth-child(2) {
     background-color: #1b8070;
-    animation-delay: 0.2s;
+    animation-delay: 0.3s;
   }
   
   .loader > span:nth-child(3) {
