--- a/style.css
+++ b/style.css
@@ -41,6 +41,9 @@ body.no-overflow {
   padding: 0.4em;
   background-color: #000000;
 }
+.active-nav i {
+  color: #23ffde;
+}
 
 #nav-bar {
   background: #181818;
@@ -501,6 +504,65 @@ textarea {
   color: #1d1d1d;
 }
 
+.mapouter {
+  position: absolute;
+  z-index: 50;
+  right: 0;
+  height: 100vh;
+  width: 45%;
+}
+.gmap_canvas {
+  overflow: hidden;
+  background: transparent !important;
+  height: 100vh;
+  width: 100%;
+}
+
+/* _________________________________Skills___________________________________________ */
+
+.skills-charts {
+  position: absolute;
+  width: 80%;
+  right: -15%;
+  left: auto;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  z-index: 2;
+}
+
+#myCanvasContainer {
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
+
+#myCanvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  width: auto;
+  height: 100%;
+}
+#myCanvas ul {
+  display: block;
+  list-style-type: disc;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 40px;
+}
+
+#myCanvas li {
+  display: list-item;
+  text-align: -webkit-match-parent;
+}
+
 /* _________________________________RESPONSIVE___________________________________________ */
 
 @media (min-width: 600px) and (max-width: 768px) {
@@ -510,9 +572,15 @@ textarea {
   .home-page .text-zone {
     left: 22%;
   }
+  .mapouter {
+    display: none;
+  }
 }
 
 @media (max-width: 600px) {
+  .mapouter {
+    display: none;
+  }
   .link,
   i {
     max-height: 60px;
