--- a/style.css
+++ b/style.css
@@ -464,7 +464,7 @@ textarea {
 }
 
 #name {
-  width: 13rem;
+  width: 16rem;
 }
 #email {
   width: 19rem;
@@ -474,7 +474,7 @@ textarea {
 #msg {
   padding: 1em;
   margin: 2px 0;
-  width: 32.2rem;
+  width: 35.2rem;
   font-size: 1rem;
   background-color: #333;
   color: whitesmoke;
@@ -492,10 +492,9 @@ textarea {
 #sub-btn {
   padding: 0.5em 1em;
   font-size: 1rem;
-  margin-left: 27.5rem;
+  margin-left: 30.7rem;
   background-color: transparent;
   border: #23ffde 1px solid;
-  border-radius: 10%;
   color: #23ffde;
   outline: none;
 }
@@ -520,50 +519,20 @@ textarea {
 
 /* _________________________________Skills___________________________________________ */
 
-.skills-charts {
-  position: absolute;
-  width: 80%;
-  right: -15%;
-  left: auto;
-  height: 100%;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-  z-index: 2;
-}
-
-#myCanvasContainer {
-  position: relative;
-  height: 100%;
-  width: 100%;
-}
-
-#myCanvas {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  width: auto;
-  height: 100%;
-}
-#myCanvas ul {
-  display: block;
-  list-style-type: disc;
-  margin-block-start: 1em;
-  margin-block-end: 1em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-  padding-inline-start: 40px;
-}
-
-#myCanvas li {
-  display: list-item;
-  text-align: -webkit-match-parent;
-}
-
 /* _________________________________RESPONSIVE___________________________________________ */
+
+@media (max-width: 1100px) {
+  .mapouter {
+    display: none;
+  }
+  .gmap_canvas {
+    display: none;
+  }
+  #name,
+  #email {
+    width: 35.2rem;
+  }
+}
 
 @media (min-width: 600px) and (max-width: 768px) {
   .home-page .text-zone {
@@ -632,9 +601,17 @@ textarea {
   .home-page .text-zone {
     top: 55%;
   }
+  .text-zone {
+    margin-left: 1rem;
+  }
   .text-zone span {
     font-size: 2rem;
     padding: 1px;
+  }
+  .lnbr {
+    display: inline-block;
+    width: 70%;
+    white-space: nowrap;
   }
   .text-zone h2 {
     font-size: 0.5rem;
