--- a/public/index.css
+++ b/public/index.css
@@ -213,12 +213,10 @@ h1 {
 
 .container {
   position: absolute;
-  width: 100vw;
-  top: 0;
-  height: 90%;
-  position: absolute;
-  opacity: 1;
   top: 5%;
+  width: 100vw;
+  height: 90%;
+  opacity: 1;
   margin: 0 1rem;
   z-index: 1;
 }
@@ -551,6 +549,9 @@ textarea {
 @media (max-width: 767px) {
   #mysvg {
     display: none;
+  }
+  .container {
+    top: 0%;
   }
   .mapouter {
     display: none;
